test/type-error-6.err.expect
test/type-error-6.ktn:3:1: error: cannot solve scalar type constraint [t1] = int
test/type-error-6.ktn:1:17: note: [t1] (output of myAddVector) is from here
test/type-error-6.ktn:3:9: note: int (from bar) is from here
