test/type-error-6.ktn
def myAddVector @a ([a] [a] -> [a]): __add_vector

def bar @a ([a] [char] -> int):
  ->x; [x] myAddVector
